--- a/interface.css
+++ b/interface.css
@@ -8,6 +8,19 @@
     display: flex;
     flex-direction: row;
   }
+  
+  .databoard-flex-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .achievements-flex-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 100px;
+  }
+
   /* Responsive layout - makes a one column layout instead of a two-column layout */
 @media (max-width: 800px) {
     .flex-container {
@@ -24,10 +37,28 @@
     padding: 20px;
 }
 
+#databoardButtons {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    text-align: center;
+    vertical-align: middle;
+    padding: 20px;
+}
+
 .navBtn {
     border: 5px solid grey;
+    border-radius: 10px;
     padding: 10px;
 }
+
+.databoardBtn {
+    border: 5px solid grey;
+    border-radius: 10px;
+    padding: 10px;
+    margin: 10px;
+}
+
 #saveButtons {
     display: flex;
     flex-grow: 1;
@@ -39,12 +70,14 @@
 
 .saveBtn {
     border: 5px solid red;
+    border-radius: 10px;
     padding: 10px;
 }
 
 .scritch-button {
-    flex-basis: 140px;
+    flex-basis: 200px;
     border: 10px solid goldenrod;
+    border-radius: 10px;
     text-align: center;
     vertical-align: middle;
     padding: 20px;
@@ -52,48 +85,89 @@
     background-size: cover;
     background-origin: content-box;
 }
+.scritch-button:active {
+    flex-basis: 200px;
+    border: 10px solid rgb(32, 218, 88);
+    border-radius: 10px;
+    text-align: center;
+    vertical-align: middle;
+    padding: 20px;
+    background: url(../idlecats/assets/scritch.svg) no-repeat center;
+    background-size: cover;
+    background-origin: content-box;
+}
 .scritch-count {
     background-color: bisque;
+    border: 10px solid goldenrod;
+    border-radius: 10px;
     text-align: left;
     vertical-align: middle;
     padding: 20px;
 }
 .autoscritch-button {
-    flex-grow: 1;
-    flex-basis: 10%;
-    background-color: bisque;
+    flex-basis: 200px;
     border: 10px solid goldenrod;
+    border-radius: 10px;
     text-align: center;
     vertical-align: middle;
     padding: 20px;
+    background: url(../idlecats/assets/autoscritch.svg) no-repeat center;
+    background-size: cover;
+    background-origin: content-box;
 }
 .available {
-    flex-grow: 1;
-    flex-basis: 10%;
     color: azure;
     background-color: green;
     border: 10px solid greenyellow;
-    text-align: center;
-    vertical-align: middle;
-    padding: 20px;
 }
 .autoscritchers {
     background-color: bisque;
+    border: 10px solid goldenrod;
+    border-radius: 10px;
     text-align: left;
     vertical-align: middle;
     padding: 20px;
 }
 .catnip-button {
-    flex-basis: 10%;
+    flex-basis: 200px;
     background-color: bisque;
     border: 10px solid goldenrod;
+    border-radius: 10px;
     text-align: center;
     vertical-align: middle;
     padding: 20px;
 }
 .catniptext {
     background-color: bisque;
+    border: 10px solid goldenrod;
+    border-radius: 10px;
     text-align: left;
     vertical-align: middle;
     padding: 20px;
+}
+
+#clickAchievements {
+    display: flex;
+    flex-grow: 1;
+    justify-content:flex-start;
+    text-align: center;
+    vertical-align: middle;
+    padding: 20px;
+}
+
+.achievement {
+    flex-basis: 100px;
+    border: 5px solid goldenrod;
+    border-radius: 5px;
+    text-align: center;
+    vertical-align: middle;
+    padding: 20px;
+    background: url(../idlecats/assets/no-scritch.svg) no-repeat center;
+    background-size: cover;
+    background-origin: content-box;
+}
+.achieved {
+    color: azure;
+    background-color: green;
+    border: 5px solid greenyellow;
 }
